fix for page-loader position on IE

--- a/src/app/components/page-loader/_index.scss
+++ b/src/app/components/page-loader/_index.scss
@@ -23,12 +23,13 @@
 .page-loader {
   position: fixed;
   top: 0;
+  bottom: 0;
   z-index: 30;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  min-height: 100vh;
+  min-height: 100%;
   background-color: $offWhite;
 
   &.loading-home {
